--- a/titanic_survival_exploration/titanic_survival_exploration.ipynb
+++ b/titanic_survival_exploration/titanic_survival_exploration.ipynb
@@ -840,7 +840,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: Predictions have an accuracy of 80.36%."
+    "**Answer**: Predictions have an accuracy of 80.36%. The approach taken was to limit one factor at a time. Every step was backed with visualizations using the vs stats tools.\n",
+    "\n",
+    "\n",
+    "\n",
+    "What I did was:\n",
+    "\n",
+    "\n",
+    "\n",
+    "1. Restrict one variable. In this case I took gender into account first and visualized the results. Although a mojority of the survivors were female, the ratio of survivors to non-survivors was much lower if the class was 3. Another case was the ratio of male survivors if they were in Pclass 1.\n",
+    "2. Restrict another variable. In the previous case I realized I could get more information if I visualized the class breakdown. This introduced the nested conditionals in my code. At first if passenger is a female then case on Pclass (And for male respectively).\n",
+    "3. Add more restrictions. Certain age ranges did not fare well as others. Which in turn introduced more conditionals in my code. \n",
+    "4. Repeatedly add more restrictions. If I continue to add more conditionals (eg. looking into Parch and SibSp) this would push the percentage higher. The number of variables would map to the number of nested conditionals in this case."
    ]
   },
   {
