--- a/boston_housing/boston_housing.ipynb
+++ b/boston_housing/boston_housing.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -297,10 +297,11 @@
    ],
    "source": [
     "# TODO: Import 'train_test_split'\n",
-    "from sklearn.cross_validation import train_test_split\n",
+    "# from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# TODO: Shuffle and split the data into training and testing subsets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features, prices, test_size=0.2)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, prices, test_size=0.2, random_state=33)\n",
     "# (None, None, None, None)\n",
     "\n",
     "# Success\n",
@@ -389,8 +390,8 @@
    "source": [
     "**Answer: **\n",
     "+ max_depth = 3. \n",
-    "+ They would eventually converge.\n",
-    "+ Yes. This would allow the curves to converge."
+    "+ After 300 points the points have reached a point where adding more points does not significantly change score. It just fluctuates at 0.8 . The test curve has converged to around the same 0.8 score and fluctuates there. This model can predict with around 80% confidence. \n",
+    "+ It seems that it would just fluctuate around 0.8 hence adding more points would not significantly change the score or performance of the model."
    ]
   },
   {
@@ -440,7 +441,7 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "+ When the model is trained with a maximum depth of 1, the analysis suffers from high bias due to the model not being complex enough. \n",
+    "+ When the model is trained with a maximum depth of 1, the analysis suffers from high bias due to the model not being complex enough. It had not fully understood the features of what we want to train it on. Its like asking asking a more general question. Answering this question does not necessarily yield a good answer as it can be seen in the validation score. The answer to the question could be correct to the general one this model asks but does not answer the question we are asking.\n",
     "+ When the model is trained with a depth of 10 we can see that we acheive near perfect score when it comes to training, however when you look at the validation curves they converge to a score a lot lower than the score of the training set. It cannot generalize well and hence does poorly. "
    ]
   },
@@ -520,7 +521,11 @@
    "metadata": {},
    "source": [
     "**Answer: **\n",
-    "+ K-fold cross validation splits the data into k-buckets. We then proceed to train the data on k-1 buckets. After that we test using the last bucket.\n",
+    "+ K-fold cross validation\n",
+    "    + splits the data into k-buckets. \n",
+    "    + We then proceed to train the data on k-1 buckets. And test using the last bucket.\n",
+    "    + We then train our model k-times.\n",
+    "    + We then average the results to get a final model.\n",
     "+ This allows us to benefit from using all of the data and train with different datasets. This also removes any leakage that can occur in when just having one testing and continously tweaking it until the estimator does well."
    ]
   },
@@ -549,7 +554,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: Import 'make_scorer', 'DecisionTreeRegressor', and 'GridSearchCV'\n",
@@ -639,7 +646,9 @@
    "source": [
     "** Hint: ** The answer comes from the output of the code snipped above.\n",
     "\n",
-    "**Answer: ** 4"
+    "**Answer: ** \n",
+    "+ Optimal Model depth = 4\n",
+    "+ The result makes sense as this approach is more rigorous and tested 10 models instead of 4. This allowed it to find the most optimal one. Our best guess makes sense because it is the closest to most optimal depth of 4 ( We chose 3 ). Our guess is correct."
    ]
   },
   {
@@ -698,13 +707,32 @@
     "\n",
     "\n",
     "\n",
+    "+ The house for client 1 seems to be in the middle:\n",
+    "    + The house isn't the smallest\n",
+    "    + Its situated in an area where poverty isn't high.\n",
+    "    + Student teacher ratio is also not as high.\n",
+    "    \n",
+    "    \n",
     "+ Predicted selling price for Client 2  home: $285,950.00\n",
     "\n",
     "\n",
     "\n",
+    "+ The house for client 2 seems to be on the lower end of the spectrum:\n",
+    "    + The house is the smallest with 4 rooms compared to the other two.\n",
+    "    + Poverty level is also high in the neighborhood.\n",
+    "    + Student teacher ratio is also somewhat large.\n",
+    "    \n",
+    "    \n",
     "+ Predicted selling price for Client 3  home: $957,900.00\n",
     "\n",
     "\n",
+    "\n",
+    "+ The house for client 3 seems to be in the higher class:\n",
+    "    + Number of rooms is greater.\n",
+    "    + Poverty level is very low.\n",
+    "    + Student teacher ratio is also low.\n",
+    "    \n",
+    "    \n",
     "+ These reccomendations fit the predictions in: \n",
     "    + The price goes higher with the increase in the number of rooms.\n",
     "    + The price goes lower as peverty level increases\n",
